# rANS-data-compressor

./: CMakeLists.txt  Licence  README.md  example.txt  main.cpp  rans.cpp  rans.h
tests/: rans_tests.cpp
